# klimbook-release-notes

./: .gitignore  README.md  config.yaml  pyproject.toml
src/kbkro/: __init__.py  cli.py  ollama_shim.py
src/klimbook_release/: __init__.py  cache.py  changelog.py  classifier.py  cli.py  config.py  estimate.py  formatter.py  generator.py  git_reader.py  models.py  prompts.py  utils.py  validator.py
tests/: __init__.py  conftest.py  test_cache.py  test_changelog.py  test_classifier_mock.py  test_estimate.py  test_formatter_mock.py  test_generator_mock.py  test_models.py
